# starkbiter

./: .codespellrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  book.toml  rust-toolchain.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: lint.yaml  mdbook.yml  release-plz.yaml  test.yaml
bindings/: CHANGELOG.md  Cargo.toml
bindings/contracts/: EkuboCore.class.json  contracts_RouterLite.contract_class.json  contracts_Swapper.contract_class.json  contracts_UserValues.contract_class.json
bindings/src/: argent_account.rs  contracts_counter.rs  contracts_swapper.rs  contracts_user_values.rs  counter.rs  erc20.rs  erc_20_mintable_oz0.rs  lib.rs  user_values.rs
core/: Cargo.toml  mainnet-trimmed.sqlite
core/benches/: bench.rs
core/src/: errors.rs  events.rs  lib.rs
core/src/database/: fork.rs
core/src/environment/: constants.rs  instruction.rs  mod.rs  sqlite_state_reader.rs  utils.rs
core/src/middleware/: cheating_provider.rs  connection.rs  middleware.rs  mod.rs  traits.rs
core/src/tokens/: mod.rs
core/tests/: common.rs  contracts.rs  ekubo.rs  simple.rs
core2/: Cargo.toml
core2/src/: errors.rs  events.rs  lib.rs
core2/src/database/: fork.rs
core2/src/environment/: instruction.rs  mod.rs  utils.rs
core2/src/middleware/: connection.rs  mod.rs  nonce_middleware.rs
docs/: Cargo.toml
docs/src/: index.md
docs/src/getting_started/: examples.md  index.md
docs/src/usage/: arbiter_cli.md  arbiter_macros.md  index.md
docs/src/usage/arbiter_core/: index.md  middleware.md
docs/src/usage/arbiter_engine/: agents_and_engines.md  behaviors.md  index.md  worlds_and_universes.md
engine/: CHANGELOG.md  Cargo.toml
engine/src/: agent.rs  errors.rs  lib.rs  machine.rs  messager.rs  world.rs
engine/tests/: common.rs  machine_integration.rs  mock_simulation.rs  universe_integration.rs
examples/minter/: main.rs
examples/minter/behaviors/: mod.rs  token_admin.rs  token_requester.rs
examples_old/minter/behaviors/: token_admin.rs
macros/: CHANGELOG.md  Cargo.toml
macros/src/: lib.rs
moved/: common.rs  contracts.rs  environment_integration.rs  events_integration.rs  middleware_integration.rs
python-bindings/: CHANGELOG.md  Cargo.toml  pyproject.toml  reference.py  requirements.txt
python-bindings/example/: requirements.txt  test.py
python-bindings/src/: environment.rs  lib.rs  middleware.rs
tests/: account.rs  basic_middleware.rs  ekubo_swap.rs  erc20.rs  events.rs
