[workspace]
# List of crates included in this workspace
members = ["core", "bindings", "macros", "engine"]

# List of crates excluded from this workspace
exclude = ["benches", "docs"]

# Package configuration
[package]
name = "arbiter"
version = "0.4.20"
edition = "2021"
authors = [
    "Waylon Jepsen <waylonjepsen1@gmail.com>",
    "Colin Roberts <colin@autoparallel.xyz>",
]
description = "Allowing smart contract developers to do simulation driven development via an EVM emulator"
license = "Apache-2.0"
keywords = ["ethereum", "evm", "emulator", "testing", "smart-contracts"]

# Binary configuration
[[bin]]
name = "arbiter"
path = "bin/main.rs"

# [[example]]
# name = "minter"
# path = "examples/minter/main.rs"

[workspace.dependencies]
# Arbiter local for development
arbiter-bindings = { path = "bindings" }
arbiter-core = { path = "core" }
arbiter-engine = { path = "engine" }
arbiter-macros = { path = "macros" }

starknet-devnet-core = { path = "/Users/baitcode/work/starknet/starknet-devnet/crates/starknet-devnet-core" }
starknet-devnet-types = { path = "/Users/baitcode/work/starknet/starknet-devnet/crates/starknet-devnet-types" }

# cainome = { version = "0.8.0", features = ["abigen-rs"] }
cainome = { path = "/Users/baitcode/work/starknet/cainome", features = [
    "abigen-rs",
] }

starknet = "=0.15.1"
starknet-core = "=0.14.0"
starknet-accounts = "=0.14.0"

# Arbiter crates.io for release, these need to be used to do crate releases!
# arbiter-bindings = "0.1.7"
# arbiter-core = "0.11.0"
# arbiter-engine = "0.4.0"
# arbiter-macros = "0.1.4"

serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0.116" }
toml = "0.8.12"

ethers = "=2.0.11"
ethers-providers = "=2.0.11"

tokio = { version = "1.36.0", features = ["macros", "full"] }
futures = "0.3.30"
futures-util = { version = "0.3.30" }
async-stream = "0.3.5"
async-trait = { version = "0.1.80" }
crossbeam-channel = { version = "0.5.12" }

syn = { version = "2.0.60", features = ["full"] }
proc-macro2 = { version = "1.0.79" }

tracing = "0.1.40"
thiserror = { version = "1.0.59" }
anyhow = "1.0.83"

# Dependencies for the release build of Arbiter bin
[dependencies]
arbiter-core.workspace = true
cainome.workspace = true

# Command line and config
clap = { version = "4.5.2", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
config = { version = "=0.14.0" }
toml.workspace = true
proc-macro2.workspace = true
syn.workspace = true
Inflector = { version = "=0.11.4" }

# Building files
foundry-config = { version = "=0.2.0" }
tempfile = { version = "3.10.1" }

# Errors
thiserror.workspace = true
# Dependencies for the test build and development
[dev-dependencies]
arbiter-bindings.workspace = true

arbiter-engine.workspace = true
arbiter-macros.workspace = true

serde.workspace = true
async-trait.workspace = true
anyhow.workspace = true
rayon = { version = "1.10.0" }

# Necessary for examples
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.18"
assert_cmd = { version = "=2.0.14" }


# Release profile
[profile.release]
# Link-Time Optimization can improve runtime at cost of build time
lto = true
# The Rust compiler splits your crate into multiple codegen units to parallelize (and thus speed up) compilation but at the cost of optimization. 
# This setting tells the compiler to use only one codegen unit, which will slow down compilation but improve optimization.
codegen-units = 1
