[package]
name = "arbiter-bindings"
version = "0.1.7"
edition = "2021"
description = "Rust bindings for common solidity smart contracts"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet = "=0.14.0"
cainome = { version = "0.7.0", features = ["abigen-rs"] }
