[package]
name = "starkbiter-bindings"
version = "0.1.7"
edition = "2021"
description = "Rust bindings for common solidity smart contracts"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet.workspace = true
starknet-core.workspace = true
starknet-accounts.workspace = true
starknet-signers.workspace = true
starknet_api.workspace = true

cainome.workspace = true
serde.workspace = true
serde_json.workspace = true
