[package]
name = "starkbiter-engine"
version = "0.4.0"
edition = "2021"
authors = ["Baitcode <batiyiv@gmail.com>", "Matthias <matthias@pragma.build>"]
description = "Allowing smart contract developers to do simulation driven development via an EVM emulator"
license = "Apache-2.0"
keywords = ["ethereum", "evm", "emulator", "testing", "smart-contracts"]
readme = "../README.md"
documentation = "https://docs.rs/starkbiter-engine"
homepage = "https://github.com/astraly-labs/starkbiter"
repository = "https://github.com/astraly-labs/starkbiter"

[dependencies]
starkbiter-core.workspace = true
starkbiter-macros.workspace = true

tokio.workspace = true
futures-util.workspace = true
async-trait.workspace = true
async-stream.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true

thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
starkbiter-core.workspace = true
starkbiter-bindings.workspace = true
tracing-subscriber = "0.3.18"
tracing-test = "0.2.4"
