[package]
name = "starkbiter-macros"
version = "0.1.4"
edition = "2021"
authors = [
    "Matt Czernik <matt@primitive.xyz>",
    "Colin Roberts <colin@autoparallel.xyz>",
]
description = "Starkbiter macros for Ethereum smart contract testing."
license = "Apache-2.0"
keywords = ["ethereum", "evm", "emulator", "testing", "smart-contracts"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
proc-macro2.workspace = true
quote = "1.0.36"
