[package]
name = "python-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"

starkbiter-engine.workspace = true
starkbiter-bindings.workspace = true
starkbiter-core.workspace = true

starknet.workspace = true
starknet-core.workspace = true
# starknet-types.workspace = true
starknet-accounts.workspace = true
starknet-signers.workspace = true
