[package]
name = "python-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.3"
pyo3-asyncio = { version = "0.20", features = ["attributes", "tokio-runtime"] }

futures.workspace = true
tokio.workspace = true
uuid.workspace = true

starkbiter-engine.workspace = true
starkbiter-bindings.workspace = true
starkbiter-core.workspace = true

starknet.workspace = true
starknet-core.workspace = true
# starknet-types.workspace = true
starknet-accounts.workspace = true
starknet-signers.workspace = true
